setupQt()

add_subdirectory(uvshared)
add_subdirectory(uvmaterialappbar)
add_subdirectory(uvmaterialautocomplete)
add_subdirectory(uvmaterialavatar)
add_subdirectory(uvmaterialbadge)
add_subdirectory(uvmaterialcheckbox)
add_subdirectory(uvmaterialcircularprogress)
add_subdirectory(uvmaterialdialog)
add_subdirectory(uvmaterialdrawer)
add_subdirectory(uvmaterialfab)
add_subdirectory(uvmaterialflatbutton)
add_subdirectory(uvmaterialiconbutton)
add_subdirectory(uvmaterialprogress)
add_subdirectory(uvmaterialradiobutton)
add_subdirectory(uvmaterialraisedbutton)
add_subdirectory(uvmaterialscrollbar)
add_subdirectory(uvmaterialslider)
add_subdirectory(uvmaterialsnackbar)
add_subdirectory(uvmaterialswitchbtn)
add_subdirectory(uvmaterialtabs)
add_subdirectory(uvmaterialtextfield)
add_subdirectory(uvmaterialtoggle)
add_subdirectory(uvmaterialwaitingwidget)